[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Crystal/crystal_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Resources/Crystal/crystal.gd" type="Script" id=2]
[ext_resource path="res://Assets/Crystal/crystal_light1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Crystal/crystal_light3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Crystal/crystal_light2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Crystal/crystal_light4.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.5, 1.09375 )

[sub_resource type="CircleShape2D" id=4]
radius = 140.0

[sub_resource type="CircleShape2D" id=5]
radius = 90.0

[sub_resource type="Animation" id=1]
resource_name = "Crystal"
length = 3.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.12, 0.14, 0.16, 0.18, 0.2, 0.22, 0.24, 0.26, 0.28, 0.3, 0.32, 0.34, 0.36, 0.38, 0.4, 0.42, 0.44, 0.46, 0.48, 0.5, 0.52, 0.54, 0.56, 0.58, 0.63, 0.78, 0.81 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 32, 33, 28 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Crystal_Light"
length = 3.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.35, 0.55, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.55 ),
"transitions": PoolRealArray( 2, 4 ),
"update": 0,
"values": [ 0.0, 1.5 ]
}

[node name="Crystal" type="Sprite"]
texture = ExtResource( 1 )
hframes = 34
script = ExtResource( 2 )

[node name="CollectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectionArea"]
position = Vector2( 2.5, -7.5 )
scale = Vector2( 0.999999, 0.999999 )
shape = SubResource( 2 )

[node name="CloseArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CloseArea"]
shape = SubResource( 4 )

[node name="TooCloseArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TooCloseArea"]
shape = SubResource( 5 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 3 )
energy = 0.0495868

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Crystal = SubResource( 1 )
anims/Crystal_Light = SubResource( 3 )

[connection signal="body_entered" from="CollectionArea" to="." method="_on_CollectionArea_body_entered"]
[connection signal="body_entered" from="CloseArea" to="." method="_on_CloseArea_body_entered"]
[connection signal="body_exited" from="CloseArea" to="." method="_on_CloseArea_body_exited"]
[connection signal="body_entered" from="TooCloseArea" to="." method="_on_TooCloseArea_body_entered"]
[connection signal="body_exited" from="TooCloseArea" to="." method="_on_TooCloseArea_body_exited"]
